added U3: profiles/templates backend with MOUSE/SAXSess examples
